--- a/README.org
+++ b/README.org
@@ -51,9 +51,9 @@ its content.
 + [[https://www.irif.fr/~curien/LMFI1.pdf][Théorie de la démonstration]]. ~ Pierre-Louis Curien (2009). #Logic #Math
 + [[https://github.com/herbelin/cours-preuves-ordinateur/][Cours: Preuves assistées par ordinateur (hiver 2021)]]. ~ Hugo Herbelin, and Théo Zimmermann.  #ITP #Coq
 + [[https://avigad.github.io/lamr/logic_and_mechanized_reasoning.pdf][Logic and mechanized reasoning]]. ~ Jeremy Avigad, Marijn J. H. Heule, and Wojciech Nawrocki. #eBook #Logic #Math #LeanProver #FunctionalProgramming #SAT #SMT
-+ [[https://github.com/avigad/lamr][Logic and mechanized reasoning [Repository]]]. ~ Jeremy Avigad, Marijn J. H. Heule, and Wojciech Nawrocki. #Logic #Math #LeanProver #FunctionalProgramming #SAT #SMT
-+ [[https://www.cs.cmu.edu/~mheule/15217-f21/][Logic and mechanized reasoning [Course]]]. ~ Jeremy Avigad, Marijn J. H. Heule, and Wojciech Nawrocki. #Logic #Math #LeanProver #FunctionalProgramming #SAT #SMT
-+ [[https://www.andrew.cmu.edu/user/avigad/Talks/fmtea.pdf][Teaching logic and mechanized reasoning with Lean 4 [Slides]]]. ~ Jeremy Avigad (Marijn Heule and Wojciech Nawrocki). #ITP #LeanProver #Logic
++ [[https://github.com/avigad/lamr][Logic and mechanized reasoning (Repository)]]. ~ Jeremy Avigad, Marijn J. H. Heule, and Wojciech Nawrocki. #Logic #Math #LeanProver #FunctionalProgramming #SAT #SMT
++ [[https://www.cs.cmu.edu/~mheule/15217-f21/][Logic and mechanized reasoning (Course)]]. ~ Jeremy Avigad, Marijn J. H. Heule, and Wojciech Nawrocki. #Logic #Math #LeanProver #FunctionalProgramming #SAT #SMT
++ [[https://www.andrew.cmu.edu/user/avigad/Talks/fmtea.pdf][Teaching logic and mechanized reasoning with Lean 4 (Slides)]]. ~ Jeremy Avigad (Marijn Heule and Wojciech Nawrocki). #ITP #LeanProver #Logic
 + [[https://www.cl.cam.ac.uk/~lp15/papers/Reports/Verif-Transcendental-Algs.pdf][Formal verification of transcendental fixed and floating point algorithms using an automatic theorem prover]]. ~ Samuel Coward, L. C. Paulson, Theo Drane and Emiliano Morini. #ATP #MetiTarski #Math
 + [[https://arxiv.org/abs/2105.13583][A modular first formalisation of combinatorial design theory]]. ~ Chelsea Edmonds and L. C. Paulson. #ITP #IsabelleHOL
 + [[https://www.andrew.cmu.edu/user/avigad/Talks/topos.pdf][Formal mathematics, dependent type theory, and the Topos Institute [Slides]]]. ~ Jeremy Avigad. #ITP #LeanProver #Math
