Versión en inglés.

--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+OPTIONS: ^:nil
-#+TITLE: Reading list for computational logic, interactive theorem proving and functional programming
+#+TITLE: Readings on computational logic, interactive theorem proving and functional programming
 
 This repository is a collection of readings shared on [[https://twitter.com/Jose_A_Alonso][Twitter]] about
 computational logic, interactive theorem proving and functional programming.
